# zammad_telegram_bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.override.yml.off  docker-compose.yml  pyproject.toml
migrations/versions/: 0001_initial.py
src/: config.py  logging_config.py
src/bot/: __init__.py  app.py  keyboards.py
src/bot/handlers/: __init__.py  message.py  queue_select.py
src/bot/middleware/: __init__.py  correlation.py
src/db/: models.py  session.py
src/db/repositories/: __init__.py  ticket_repository.py  user_repository.py
src/services/: __init__.py  notification_service.py  ticket_service.py
src/webhook/: __init__.py  app.py  router.py
src/zammad/: __init__.py  client.py  schemas.py
tests/: conftest.py
tests/integration/: test_end_to_end_cycle.py  test_webhook_flow.py
tests/unit/: test_user_service.py
zammad-integration/: .env.example
zammad-integration/docs/: HEALTHCHECKS.md  SETUP.md  UI_STEPS.md
zammad-integration/infra/: docker-compose.yml
zammad-integration/infra/nginx/: nginx.conf
zammad-integration/telegram-gateway/: Dockerfile  requirements.txt
zammad-integration/telegram-gateway/app/: __init__.py  config.py  database.py  main.py  models.py  telegram_client.py  zammad_client.py
zammad-integration/zammad-setup/: config.py  setup.py
zammad-telegram-bot/: Dockerfile  README.md  pyproject.toml
zammad-telegram-bot/migrations/: env.py
zammad-telegram-bot/src/: __init__.py  config.py  main.py
zammad-telegram-bot/src/bot/: keyboards.py  states.py
zammad-telegram-bot/tests/: conftest.py
(+17 files in other folders)
